spacing fixed

--- a/components/slide-down-button.module.css
+++ b/components/slide-down-button.module.css
@@ -35,3 +35,9 @@
     transform: translateY(22px);
   }
 }
+
+@media only screen and (min-width: 700px) {
+  .slideDownButton {
+    bottom: 24px;
+  }
+}
